--- a/LassePhoto/App.config
+++ b/LassePhoto/App.config
@@ -1,6 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="LassePhoto.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
     </startup>
+    <userSettings>
+        <LassePhoto.Properties.Settings>
+            <setting name="OpenFileDialoge" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="SaveFileDialoge" serializeAs="String">
+                <value />
+            </setting>
+        </LassePhoto.Properties.Settings>
+    </userSettings>
 </configuration>
